[package]
name = "toggl_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.59"
log = "0.4.14"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

